--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">i10jan</string>
+    <string name="next_button">次へ</string>
+    <string name="thermometer_label">体温を入力してください</string>
+    <string name="body_temperature_editor">35.0 ~ 38.0</string>
 </resources>
